--- a/core/templates/core/ingrediente_form.html
+++ b/core/templates/core/ingrediente_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 
 {% block title %}
     {% if object %}Editar Ingrediente{% else %}Adicionar Ingrediente{% endif %}
