feat: listagem de receitas e geração por ia

--- a/core/templates/core/ingrediente_lista.html
+++ b/core/templates/core/ingrediente_lista.html
@@ -3,36 +3,47 @@
 {% block title %}Gestão de Ingredientes{% endblock %}
 
 {% block content %}
-    <h2>🍽️ Gestão de Ingredientes</h2>
-    <a href="{% url 'adicionar_ingrediente' %}" class="btn">➕ Adicionar Novo Ingrediente</a>
-    <a href="{% url 'lista_categorias' %}" class="btn">Gerenciar Categorias</a>
-    <br><br>
+    <div class="d-flex justify-content-between align-items-center mb-2">
+        <h2>🍽️ Gestão de Ingredientes</h2>
+        <div class="d-flex justify-content-end align-items-end mb-3">
+            <div class="d-block p-3" style="max-width: 150px;">
+                <a href="{% url 'adicionar_ingrediente' %}" class="btn btn-success">➕ Adicionar Ingrediente</a>
+            </div>
+            <div  class="d-block p-3" style="max-width: 150px;">
+                <a href="{% url 'lista_categorias' %}" class="btn btn-info">📂 Gerenciar Categorias</a>
+            </div>
+        </div>
+    </div>
 
     {% if ingredientes %}
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Categoria</th>
-                    <th>Caloria (por porção)</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for ingrediente in ingredientes %}
-                <tr>
-                    <td>{{ ingrediente.nome }}</td>
-                    <td>{{ ingrediente.categoria|default:"Não Definida" }}</td>
-                    <td>{{ ingrediente.caloria }}</td>
-                    <td>
-                        <a href="{% url 'editar_ingrediente' ingrediente.pk %}" class="btn">Editar</a>
-                        <a href="{% url 'excluir_ingrediente' ingrediente.pk %}" class="btn">Excluir</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-striped table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Nome</th>
+                        <th>Categoria</th>
+                        <th>Caloria (por porção)</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for ingrediente in ingredientes %}
+                    <tr>
+                        <td>{{ ingrediente.nome }}</td>
+                        <td>{{ ingrediente.categoria|default:"Não Definida" }}</td>
+                        <td>{{ ingrediente.caloria }}</td>
+                        <td>
+                            <a href="{% url 'editar_ingrediente' ingrediente.pk %}" class="btn btn-sm btn-warning">Editar</a>
+                            <a href="{% url 'excluir_ingrediente' ingrediente.pk %}" class="btn btn-sm btn-danger">Excluir</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     {% else %}
-        <p>Nenhum ingrediente cadastrado. Comece adicionando um!</p>
+        <div class="alert alert-info" role="alert">
+            <strong>Nenhum ingrediente cadastrado.</strong> Comece adicionando um novo!
+        </div>
     {% endif %}
 {% endblock %}
